--- a/Dockerfile.github
+++ b/Dockerfile.github
@@ -4,7 +4,7 @@
 #
 # docker build . -f Dockerfile.github -t cyralinc/supervisord:latest
 #
-FROM golang:alpine as builder
+FROM golang:1.22-alpine3.20 AS builder
 
 RUN apk add --no-cache --update git
 
