Fix dependabot and build (#6)
* Update build dependencies

* Attempt to fix build

* Fix GoReleaser version

* Fix .goreleaser.yml

* Move dependabot config file to proper place

* Fix .goreleaser.yml

* Elevate goreleaser permissions

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+version: 2
+
 project_name: supervisord
 
 env:
@@ -91,9 +93,6 @@ archives:
       - none*
 
 release:
-  github:
-    owner: ochinchina
-    name: supervisord
   draft: false
   prerelease: auto
   name_template: "{{.ProjectName}}-v{{.Version}}"
