--- a/.github/workflows/release_binaries.yml
+++ b/.github/workflows/release_binaries.yml
@@ -10,6 +10,8 @@ jobs:
 
   goreleaser:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
 
@@ -18,7 +20,7 @@ jobs:
 
       - name: Install UPX
         env:
-          UPXVER: "4.0.2"
+          UPXVER: "4.2.4"
         run: |
           if [[ ! -f "upx/${UPXVER}/upx" ]]; then
             echo "Installing upx .."
@@ -32,15 +34,15 @@ jobs:
           upx --version | grep -E '^upx'
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.18
+          go-version: 1.22
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
           distribution: goreleaser
-          version: latest
+          version: "~> v2"
           args: release
         env:
-          GITHUB_TOKEN: ${{ secrets.GA_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
